# NoNeedforHeaven-Web

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml
authoring/: README.md
authoring/published/: README.md
backend/: README.md  pyproject.toml
backend/src/buxianxian/: __init__.py
backend/src/buxianxian/api/: __init__.py  app.py  composition.py  contracts.py  routes.py
backend/src/buxianxian/application/: __init__.py  game_runtime.py  new_game.py  ports.py  session.py
backend/src/buxianxian/domain/: __init__.py  character_creation.py  cultivation.py  engine.py  model.py  random_source.py
backend/src/buxianxian/infrastructure/: __init__.py  prototype_traits.py  random_source.py  runtime_sources.py  save_repository.py
backend/src/buxianxian/infrastructure/content/: __init__.py  __main__.py  cli.py  compiler.py  errors.py  model.py  parser.py
backend/tests/: test_health.py
backend/tests/api/: test_composition.py  test_game_api.py
backend/tests/application/: test_application_boundaries.py  test_game_runtime.py  test_new_game.py  test_session.py
backend/tests/content/: test_compiler.py  test_content_boundaries.py
backend/tests/content/fixtures/published/: document_alpha.md
backend/tests/domain/: test_boundaries.py  test_character_creation.py  test_cultivation.py  test_engine.py
backend/tests/infrastructure/: test_random_source.py  test_save_repository.py
docs/: api.md  project-status.md  roadmap.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
(+39 files in other folders)
